# azure-keyvault-browser

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml  version-bump.yml
crates/azure-keyvault-tui/: Cargo.toml
crates/azure-keyvault-tui/src/: app.rs  azure_cli_config.rs  azure_profile.rs  background.rs  input.rs  main.rs  tui.rs
crates/azure-keyvault-tui/tests/: azureProfile.json
xtask/: Cargo.toml
xtask/src/: main.rs
