[package]
name = "azure-keyvault-tui"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/aisamji/azure-keyvault-tui/tree/main/crates/azure-keyvault-tui"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "sync", "macros", "time"] }
clap.workspace = true
anyhow = "1.0.98"
